--- a/src/main/java/ufjf/dcc025/trabalho/view/inicio.form
+++ b/src/main/java/ufjf/dcc025/trabalho/view/inicio.form
@@ -146,7 +146,7 @@
               <Font name="Tahoma" size="12" style="1"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="Movimenta&#xe7;&#xf5;es"/>
+            <Property name="text" type="java.lang.String" value="Pagar"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Default Cursor"/>
             </Property>
