--- a/src/main/java/ufjf/dcc025/trabalho/view/login.form
+++ b/src/main/java/ufjf/dcc025/trabalho/view/login.form
@@ -142,6 +142,9 @@
         <Property name="horizontalAlignment" type="int" value="4"/>
         <Property name="text" type="java.lang.String" value="Abrir conta"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel4MouseClicked"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
