--- a/src/main/java/ufjf/dcc025/trabalho/view/index.form
+++ b/src/main/java/ufjf/dcc025/trabalho/view/index.form
@@ -105,6 +105,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Ver extrato"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel3MouseClicked"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
