--- a/src/main/java/ufjf/dcc025/trabalho/view/index.form
+++ b/src/main/java/ufjf/dcc025/trabalho/view/index.form
@@ -115,6 +115,9 @@
           <Color blue="e6" green="e6" red="e6" type="rgb"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jPanel1MouseClicked"/>
+      </Events>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -295,7 +298,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="f2" green="5c" red="8c" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Banco XXXXX"/>
+        <Property name="text" type="java.lang.String" value="XBANK"/>
       </Properties>
     </Component>
   </SubComponents>
