--- a/src/main/java/ufjf/dcc025/trabalho/view/sidebar.form
+++ b/src/main/java/ufjf/dcc025/trabalho/view/sidebar.form
@@ -73,7 +73,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="f2" green="5c" red="8c" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Banco XXXXX"/>
+        <Property name="text" type="java.lang.String" value="XBANK"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel12">
